--- a/src/index.html
+++ b/src/index.html
@@ -30,9 +30,12 @@
 
 </head>
 <body>
-  <h1>Ich bin eine H1 Überschrift</h1>
-  <h2>Ich bin eine H2 Überschrift</h2>
+  <div id="content" class="site-content">
+    <h1>Ich bin eine H1 Überschrift</h1>
+    <h2>Ich bin eine H2 Überschrift</h2>
+  </div>
   
+
 
 </body>
 
